--- a/src/components/organisms/changePassForm/changePass.module.css
+++ b/src/components/organisms/changePassForm/changePass.module.css
@@ -14,3 +14,11 @@
 .but{
   width: 130px;
 }
+.icon{
+  font-size: 17px;
+  position: absolute;
+  z-index: 300;
+  margin-top: 32px;
+  margin-left: 8px;
+  cursor: pointer;
+}
