--- a/src/components/organisms/newSellerReceipt/newSellerReceipt.module.css
+++ b/src/components/organisms/newSellerReceipt/newSellerReceipt.module.css
@@ -74,3 +74,22 @@
 .formu::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+.cheCont{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 7px 10px 7px;
+    margin-bottom: 5px;
+}
+.addBut{
+    all: unset;
+    border: 1px solid #e1e1e1;
+    background-color: #e1e1e1;
+    padding: 1px;
+    border-radius: 2px;
+}
+.addBut:hover{
+    border: 1px solid #ededed;
+    background-color: #ededed;
+    padding: 1px;
+    border-radius: 2px;
+}
